# ansible-config_template

./: .gitreview  CONTRIBUTING.rst  README.rst  galaxy.yml  setup.cfg  test-requirements.txt  tox.ini
action/: config_template.py
doc/: requirements.txt
doc/source/: conf.py  index.rst
examples/: ansible-role-requirements.yml
meta/: main.yml
molecule/default/: molecule.yml
plugins/: action
plugins/action/: config_template.py
releasenotes/notes/: config_template_plugin-f763b1bb32ccdd19.yaml  core-2.19-e72a31adf34a6a5e.yaml  pypi_deprecation-93d9628dcdd76f93.yaml  raw_tag_fixed-9c7cc7506314f76b.yaml  replaced_ordered_dict-d1411f602960681d.yaml  start_end_string_support-420acb44b5feeb5c.yaml
releasenotes/source/: conf.py
tests/: ansible-role-requirements.yml  test-common-tasks.yml  test-ini.yml  test-json.yml  test-yaml.yml  test.yml
tests/files/: test_comment_configs.ini.expected  test_default_section.ini.expected  test_jinja_variables.yml.expected  test_multikey_update.ini.expected  test_multiline_strs.json.expected  test_raw_content.ini.expected  test_remote_src_multistropts.ini.expected
tests/group_vars/: all_containers.yml
tests/host_vars/: container1.yml  container2.yml  container3.yml
tests/templates/: test_default_section.ini  test_jinja_variables.yml  test_multikey_update.ini  test_multiline_strs.json  test_multistropts.ini  test_raw_content.ini  test_with_comments.ini
zuul.d/: project.yaml
